# llvm-general

./: .gitignore  cabal.project  stack.yaml
llvm-general/: Setup.hs  llvm-general.cabal
llvm-general/src/Control/Monad/Trans/: AnyCont.hs
llvm-general/src/LLVM/General/: CodeModel.hs  Transforms.hs
llvm-general/src/LLVM/General/Internal/: Coding.hs  Context.hs  Instruction.hs  LibraryFunction.hs  MemoryBuffer.hs  Module.hs  PassManager.hs  RawOStream.hs  String.hs  Target.hs
llvm-general/src/LLVM/General/Internal/FFI/: Bitcode.hs  Cleanup.hs  Context.hs  DataLayout.hs  GlobalValue.hs  LLVMCTypes.hs  LLVMCTypes.hsc  MemoryBuffer.hs  Module.hs  PassManager.hs  PassManagerC.c  PtrHierarchy.hs  RawOStream.hs  Target.hs  TargetC.c  TargetC.cpp  Transforms.hs  Type.hs
